{
    "name": "InputMap",
    "maps": [
        {
            "name": "KeyboardAndMouse",
            "id": "83cb7c7d-dab1-4721-b5fc-6a0acc2ee11b",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "3a184e34-fa9d-4969-a3b7-d2abdc170b47",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6674a977-0f33-4ddc-a1bb-0fb0f8259052",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "id": "6f1c9ef2-006f-4ad7-bae7-f5f5983904e8",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "dcfdcd47-5507-47c3-ab5b-a39b4062e3f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "4a786481-774f-4b63-a0f2-f2fcb7db588d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "44339568-6e9b-404b-af3f-8d41fe09b697",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e8b4f937-6aa3-46c6-9617-39d4bb8e1bf7",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "451cd923-3326-4100-af8d-fa2d520aa40c",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "451f5a72-37fe-4ef0-8269-94560f9942d6",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}